--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ body, html {
     width: 500px;
     height: 500px;
     margin: 50px auto;
-    border: 2px solid black;
+    border: 2px solid blue;
 }
 #ball {
     width: 50px;
@@ -23,7 +23,7 @@ body, html {
 #goal {
     width: 50px;
     height: 50px;
-    background-color: green;
+    background-color: purple;
     position: absolute;
     top: 80%;
     left: 80%;
