--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,13 @@ body, html {
     width: 500px;
     height: 500px;
     margin: 50px auto;
-    border: 2px solid blue;
+    border: 5px solid blue;
 }
 #ball {
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-color:from {background-color: red;}
+  to {background-color: blue;};
     border-radius: 50%;
     position: absolute;
     top: 50%;
