--- a/styles.css
+++ b/styles.css
@@ -31,13 +31,11 @@ body, html {
     transform: translate(-50%, -50%);
 }
 
-#goal {
+.goal {
     width: 5%; /* Breedte van 5% van het container */
     height: 5%; /* Hoogte van 5% van het container */
     min-width: 50px; /* Minimale breedte van 50px */
     min-height: 50px; /* Minimale hoogte van 50px */
     background-color: purple;
     position: absolute;
-    top: 80%;
-    left: 80%;
 }
