--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body, html {
     transform: translate(-50%, -50%);
 }
 
-.goal {
+goal {
     width: 7%; /* Breedte van 5% van het container */
     height: 7%; /* Hoogte van 5% van het container */
     min-width: 50px; /* Minimale breedte van 50px */
