--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,10 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
-    display: none;
 }
 
 #game-container {
+    display: none; /* Verbergen standaard */
     position: relative;
     width: 100vw;
     height: 100vh;
